crates/models/src/snapshots/aviutl2_extension_composer_models__tests__parsing_example_manifest.snap
---
source: crates/models/src/lib.rs
expression: "serde_yml::from_str::<Manifest>(include_str!(\"../../../docs/examples/manifest.yml\")).unwrap()"
---
Manifest {
    authors: [
        ManifestAuthorsItem {
            name: Single(
                "Nanashi.",
            ),
            url: Some(
                HttpUrl(
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "sevenc7c.com",
                            ),
                        ),
                        port: None,
                        path: "/",
                        query: None,
                        fragment: None,
                    },
                ),
            ),
        },
    ],
    bundles: None,
    changelogs: [],
    configurations: [],
    description: Some(
        Single(
            "Rustで書かれたFFmpeg出力プラグインです。\n...\n（省略）\n...",
        ),
    ),
    disposables: [],
    homepage: Some(
        "https://github.com/sevenc-nanashi/aviutl2-rs",
    ),
    id: ManifestId(
        "sevenc_nanashi-aviutl2_rs-ffmpeg_output",
    ),
    license: Nicovideo {
        id: "sm45355531",
        name: Nicovideo,
        omittable: Some(
            true,
        ),
        text: None,
    },
    manifest_url: Some(
        HttpUrl(
            Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "raw.githubusercontent.com",
                    ),
                ),
                port: None,
                path: "/sevenc-nanashi/aviutl2-extension-composer/refs/heads/main/docs/examples/manifest.yml",
                query: None,
                fragment: None,
            },
        ),
    ),
    manifest_version: 1,
    name: "Rusty FFmpeg Output",
    previous_versions: [],
    resources: [
        ManifestResourcesItem {
            destination: DataDirRelativePath(
                DataDirRelativePathInner {
                    root: Plugin,
                    path: "rusty_ffmpeg_output.auo2",
                },
            ),
            scope: None,
            sha256: None,
            source: SourceUrl(
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "sevenc7c.example.com",
                        ),
                    ),
                    port: None,
                    path: "/rusty_ffmpeg_output/rusty_ffmpeg_output.auo2",
                    query: None,
                    fragment: None,
                },
            ),
        },
    ],
    summary: Single(
        "Rustで書かれたFFmpeg出力プラグイン",
    ),
    tags: [
        Single(
            "#plugin-output",
        ),
    ],
    version: Version(
        "0.1.0",
    ),
    version_number: Some(
        Uint(
            1,
        ),
    ),
}
