crates/models/src/snapshots/aviutl2_extension_composer_models__tests__parsing_example_registry.snap
---
source: crates/models/src/lib.rs
expression: "serde_yml::from_str::<Registry>(include_str!(\"../../../docs/examples/registry.yml\")).unwrap()"
---
Registry {
    contents: [
        RegistryContentsItem {
            authors: [
                RegistryContentsItemAuthorsItem {
                    name: Single(
                        "Nanashi.",
                    ),
                    url: Some(
                        HttpUrl(
                            Url {
                                scheme: "https",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: Some(
                                    Domain(
                                        "sevenc7c.com",
                                    ),
                                ),
                                port: None,
                                path: "/",
                                query: None,
                                fragment: None,
                            },
                        ),
                    ),
                },
            ],
            description: Some(
                Single(
                    "Rustで書かれたFFmpeg出力プラグインです。\n...\n（省略）\n...",
                ),
            ),
            homepage: Some(
                "https://github.com/sevenc-nanashi/aviutl2-rs",
            ),
            id: ManifestId(
                "sevenc_nanashi-aviutl2_rs-ffmpeg_output",
            ),
            license: Nicovideo {
                id: "sm45355531",
                name: Nicovideo,
                omittable: Some(
                    true,
                ),
                text: None,
            },
            manifest_url: "https://raw.githubusercontent.com/sevenc-nanashi/aviutl2-extension-composer/refs/heads/main/docs/examples/manifest.yml",
            manifest_version: 1,
            name: "Rusty FFmpeg Output",
            summary: Single(
                "Rustで書かれたFFmpeg出力プラグイン",
            ),
            tags: [
                Single(
                    "#plugin-output",
                ),
            ],
            version: Version(
                "0.1.0",
            ),
            version_number: Some(
                Uint(
                    1,
                ),
            ),
        },
    ],
    homepage: Some(
        HttpUrl(
            Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "github.com",
                    ),
                ),
                port: None,
                path: "/sevenc-nanashi/aviutl2-rs",
                query: None,
                fragment: None,
            },
        ),
    ),
    name: "AviUtl2-rs Plugin Registry",
    registry_version: 1.0,
    summary: Single(
        "AviUtl2-rsのデモプラグインのレジストリ。",
    ),
}
